[FIX] Home https

--- a/index.html
+++ b/index.html
@@ -209,17 +209,17 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis amet, hic facilis est reprehenderit vero.</p>
           <div class="d-flex justify-content-center">
             <div class="p-4">
-              <a href="http://facebook.com">
+              <a href="https://facebook.com">
                 <i class="fab fa-facebook"></i>
               </a>
             </div>
             <div class="p-4">
-              <a href="http://twitter.com">
+              <a href="https://twitter.com">
                 <i class="fab fa-twitter"></i>
               </a>
             </div>            
             <div class="p-4">
-              <a href="http://instagram.com">
+              <a href="https://instagram.com">
                 <i class="fab fa-instagram"></i>
               </a>
             </div>
@@ -236,17 +236,17 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis amet, hic facilis est reprehenderit vero.</p>
           <div class="d-flex justify-content-center">
             <div class="p-4">
-              <a href="http://facebook.com">
+              <a href="https://facebook.com">
                 <i class="fab fa-facebook"></i>
               </a>
             </div>
             <div class="p-4">
-              <a href="http://twitter.com">
+              <a href="https://twitter.com">
                 <i class="fab fa-twitter"></i>
               </a>
             </div>            
             <div class="p-4">
-              <a href="http://instagram.com">
+              <a href="https://instagram.com">
                 <i class="fab fa-instagram"></i>
               </a>
             </div>
@@ -263,17 +263,17 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis amet, hic facilis est reprehenderit vero.</p>
           <div class="d-flex justify-content-center">
             <div class="p-4">
-              <a href="http://facebook.com">
+              <a href="https://facebook.com">
                 <i class="fab fa-facebook"></i>
               </a>
             </div>
             <div class="p-4">
-              <a href="http://twitter.com">
+              <a href="https://twitter.com">
                 <i class="fab fa-twitter"></i>
               </a>
             </div>            
             <div class="p-4">
-              <a href="http://instagram.com">
+              <a href="https://instagram.com">
                 <i class="fab fa-instagram"></i>
               </a>
             </div>
@@ -290,17 +290,17 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis amet, hic facilis est reprehenderit vero.</p>
           <div class="d-flex justify-content-center">
             <div class="p-4">
-              <a href="http://facebook.com">
+              <a href="https://facebook.com">
                 <i class="fab fa-facebook"></i>
               </a>
             </div>
             <div class="p-4">
-              <a href="http://twitter.com">
+              <a href="https://twitter.com">
                 <i class="fab fa-twitter"></i>
               </a>
             </div>            
             <div class="p-4">
-              <a href="http://instagram.com">
+              <a href="https://instagram.com">
                 <i class="fab fa-instagram"></i>
               </a>
             </div>
@@ -371,7 +371,7 @@
   </div>
 </footer>
   <script
-  src="http://code.jquery.com/jquery-3.4.1.min.js"
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
